--- a/css/styles.css
+++ b/css/styles.css
@@ -19,15 +19,19 @@ input {
 	color: #ec5a62;
 	margin: 60px 0 0 20px;
 	width: 86%;
+	outline: none;
 }
 ::-webkit-input-placeholder {
   color: #C2C2C2;
 }
 button {
+	position: absolute;
+	top: 7%;
 	background: url("/img/magnifier.png");
 	width: 90px;
 	height: 90px;
 	border: none;
+	outline: none;
 }
 h1 {
 	display: inline-block;
@@ -66,7 +70,6 @@ li:hover {
 p {
 	display: inline-block;
 	margin: 0 5px;
-	vertical-align: middle;
 	user-select: none;
 	font-size: 18px;
 	color: #AFAFB1;
