--- a/css/styles.css
+++ b/css/styles.css
@@ -33,6 +33,10 @@ button {
 	border: none;
 	outline: none;
 }
+button:hover {
+	transform: scale(1.15);
+	transition: all .1s ease-in;
+}
 h1 {
 	display: inline-block;
 	width: 30%;
