--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@
 	margin: 0;
 	padding: 0;
 	font-family:Arial, sans-serif;
+	font-size: 0;
 }
 html {
 	background-color: #F1F1F1;
@@ -10,6 +11,12 @@ html {
 header {
 	width: 85%;
 	margin: auto;
+}
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
 }
 input {
 	background: none;
@@ -20,6 +27,10 @@ input {
 	margin: 60px 0 0 20px;
 	width: 86%;
 	outline: none;
+}
+.input {
+	background-image: url('../img/magnifier.svg');
+	cursor: pointer;
 }
 ::-webkit-input-placeholder {
   color: #C2C2C2;
@@ -51,15 +62,20 @@ main {
 section{
 	display: inline-block;
 	width: 30%;
-	margin: 0 18px;
+	margin: 0 1.5%;
 }
 ul {
 	list-style-type: none;
 }
+.link {
+	display: inline-block;
+	background-size: contain;
+	width: 100%;
+	height: 100%;
+}
 li {
 	background-color: rgba(118,117,128,0.05);
-	margin: 5px;
-	padding: 15px;
+	margin: 15px 0;
 	border-radius: 4px;
 }
 li:hover p{
@@ -73,9 +89,12 @@ li:hover {
 }
 p {
 	display: inline-block;
-	margin: 0 5px;
+	vertical-align: middle;
 	user-select: none;
 	font-size: 18px;
+	max-height: 45px;
+	max-width:270px;
+	overflow: hidden;
 	color: #AFAFB1;
 }
 .rounded_images {
@@ -83,6 +102,7 @@ p {
 }
 img {
 	vertical-align: middle;
+	margin: 15px;
 }
 a {
 	width: 100%;
